--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
+    "node-rsa": "^1.1.1",
     "pg": "^8.7.1",
     "sequelize": "^6.7.0"
   },
