--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "node-rsa": "^1.1.1",
     "pg": "^8.7.1",
     "sequelize": "^6.7.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "sequelize-cli": "^6.2.0"
   }
 }
