--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "express-validator": "^6.13.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "node-rsa": "^1.1.1",
     "pg": "^8.7.1",
-    "sequelize": "^6.7.0"
+    "sequelize": "^6.7.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.13",
