--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.16.0",
+    "eslint": "^8.1.0",
     "nodemon": "^2.0.13",
     "sequelize-cli": "^6.2.0"
   }
